--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								<li class="submenu">
 									<a href="">About</a>
 									<ul>
-										<li><a href="#">Executive Board</a></li>
+										<li><a href="exec.html">Executive Board</a></li>
 										<li><a href="#">Members</a></li>
 										<li><a href="#">Mission</a></li>
 										<li><a href="#">News</a></li>
